--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,22 +6,16 @@ name: CI
 # events but only for the master branch
 on:
   pull_request:
-    branches: [ master, release/* ]
+    branches: [master]
 
 jobs:
   firebase-deploy:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@master
-    - uses: actions/setup-node@master
-      with:
-        node-version: '10.x'
-    - run: npm install
-    - run: npm run build:prod
-    - uses: w9jds/firebase-action@master
-      with:
-        args: deploy --only hosting
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@master
+        with:
+          node-version: "10.20.1"
+      - run: yarn --frozen-lockfile
+      - run: yarn build
