--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-jss": "^10.3.0",
     "react-router-dom": "^5.2.0",
     "recompose": "^0.30.0",
